fix(NA): Pass isSticky from sidebar and fix widget content when collapsed.

--- a/src/components/widget/style.module.scss
+++ b/src/components/widget/style.module.scss
@@ -38,6 +38,7 @@
 
     .content {
       max-height: 0px;
+      opacity: 0.0;
     }
     .widget_template {
       overflow: hidden;
