--- a/src/components/widgets/style.module.scss
+++ b/src/components/widgets/style.module.scss
@@ -3,6 +3,6 @@
   max-width: 540px;
   z-index: 300;
   &.securityMargin {
-    margin-top: 200px;
+    margin-top: 140px;
   }
 }
